# CMod

./: README.md
examples/cuda/: default
examples/ffmpeg/: default
examples/miniconda/: default
src/binary/1.1/etc/cmod/: bash.init  path.csh  path.sh  tcsh.init  zsh.init
src/binary/1.1/info/: dir
src/binary/1.1/libexec/: cmod
src/binary/1.1/modules/languages/python/: default
src/source/cmod-1.1/: .cvsignore  AUTHORS  ChangeLog  MACHINES  Makefile.am  Makefile.in  NEWS  README  README.DEVO  RELEASING  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  ansi2knr.c  archaic.h  cmod.c  cmod.info  cmod.texi  cmod_alloc.c  cmod_alloc.h  cmod_dirent.h  cmod_main.h  cmod_parse.c  cmod_parse.h  cmod_pp.c  cmod_preproc.h  cmod_proc.c  cmod_process.h  cmod_string.c  cmod_string.h  cmod_strn.h  cmod_strp.h  cmod_token.c  cmod_token.h  cmod_trace.c  cmod_trace.h  cmod_wait.h  config.h.in  (+16 more)
src/source/cmod-1.1/testsuite/: .cvsignore  Makefile.am  Makefile.in  Makefile.tmpl  clean-sh.c  mkmf.py  t001.ok  t001.sh  t002-1  t002.ok  t002.sh  t003.ok  t003.sh  t004-1  t004.ok  t004.sh  t005-1  t005.ok.in  t005.sh  t006-1  t006.ok  t006.sh  t007.sh  t008-1  t008.ok  t008.sh  t009-1  t009.ok  t009.sh  t010-1  t010.ok  t010.sh  t011.ok  t011.sh  t012.ok  t012.sh  t013.ok  t013.sh  t014.ok  t014.sh  (+162 more)
src/source/cmod-1.1/testsuite/t030-fb/: beta  ceder  user
src/source/cmod-1.1/testsuite/t030-sy/: default  games  local  system  unix  unix-append  user
src/source/cmod-1.1/testsuite/t030-sy/X11/: R4
src/source/cmod-1.1/testsuite/t030-vi/: placeholder
usage/: cmod.md
